--- a/LJSocketServer/index.html
+++ b/LJSocketServer/index.html
@@ -4,8 +4,10 @@
         <meta charset=\"utf-8\">
         <title>欢迎网页</title>
     </head>
-    <body>
+    <body align="center">
         <B>欢迎进入此页面</B></br>
-        Hello World
+        Hello World</br>
+        <p><font color="red">美美</font></p>
+        <img src="123.jpg" height='562' width='375'></img>
     </body>
 </html>
