--- a/LJSocketServer/index.html
+++ b/LJSocketServer/index.html
@@ -5,9 +5,11 @@
         <title>欢迎网页</title>
     </head>
     <body align="center">
-        <B>欢迎进入此页面</B></br>
-        Hello World</br>
-        <p><font color="red">美美</font></p>
-        <img src="123.jpg" height='562' width='375'></img>
+        <B>欢迎使用LJ为你带来的LJSocketServer</B></br>
+        使用CFSocket  NSStream CFHTTPMessage实现在Mac上布置服务器（像tomcat），支持SSL</br>
+        <p><font color="red">介绍_1</font></p>
+        <img src="effect0.png" height='305' width='755'></img>
+        <p><font color="green">介绍_2</font></p>
+        <img src="effect.png" height='393' width='900'></img>
     </body>
 </html>
